# gios

./: .coveragerc  .pre-commit-config.yaml  .pylintrc  AGENTS.md  LICENSE  README.md  example.py  pylintrc  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  pre-commit-update.yml  publish.yml  pull_request.yml  push.yml  pythonpackage.yml  release-drafter.yml  stale.yml  test.yml
example/: example.py
gios/: __init__.py  const.py  exceptions.py  model.py
pygios/: __init__.py
scripts/: setup-local-env.sh
tests/: __init__.py  conftest.py  test_base.py  test_gios.py  test_init.py
tests/data/: indexes.json  sensor.json  sensor_667.json  sensor_670.json  sensor_invalid.json  sensor_invalid_2.json  sensor_valid_first.json  sensor_valid_second.json  sensors_invalid_1.json  sensors_invalid_2.json  sensors_invalid_3.json  sensors_valid_first_values.json  sensors_valid_second_values.json  station.json
tests/fixtures/: indexes.json  sensor_14395.json  sensor_14688.json  sensor_3759.json  sensor_3760.json  sensor_3761.json  sensor_3762.json  sensor_3764.json  sensor_3765.json  sensor_658.json  sensor_660.json  sensor_665.json  sensor_672.json  station.json  stations.json
tests/snapshots/: test_init.ambr
